# dde-control-center-plugin-example

./: README.md
v20/: CMakeLists.txt  README.md
v20/src/: CMakeLists.txt  module.cpp  module.h
